--- a/UserManagement.WebApp/UserManagement.WebApp.csproj
+++ b/UserManagement.WebApp/UserManagement.WebApp.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BootstrapBlazor" Version="9.10.0" />
+  </ItemGroup>
+
 </Project>
